# llama.rs

./: .gitignore  Cargo.toml  main.rs
src/: config.rs  helpers.rs  inference.rs  lib.rs  loader.rs  sampler.rs  tensor.rs  tokenizer.rs  utils.rs
src/loading/: loader.rs
src/model/: config.rs  files.rs  model.rs
src/quantization/: quantized_weights.rs
src/testing/: test_inference.rs  test_loading.rs  test_tokenizer.rs
src/tokenizer/: custom_tokenizer.rs  hf_tokenizer.rs  tokenizer.rs
src/transformers/: attention.rs  feed_forward.rs  rmsnorm.rs  transformer.rs  transformer_block.rs
