[package]
name = "lm"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
safetensors = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tch = "0.17.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.5"
bytemuck = "1.7"
rayon = "1.5"
half = "2.4.1"
tokenizers = "0.20.0"
glob = "0.3"

[[bin]]
name = "lm"
path = "main.rs"

[lib]
path = "src/lib.rs"


